# web-in-the-shell

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROBLEM.md  README.md  REQUESTS.md  pyproject.toml
.claude/agents/: manager.md  security.md  tester.md
.github/workflows/: integration.yml  test.yml
docker/: Dockerfile
src/: defaults.py  main.py
src/ai/: AGENT.md  REQUESTS.md  errors.py  provider.py
src/ai/decision/: answer.py  executor.py  recovery.py
src/ai/discovery/: planner.py
src/jsonschema/: __init__.py
src/network/: AGENT.md  REQUESTS.md
src/network/dispatch/: client.py  headers.py  ratelimit.py  request_builder.py  ssrf_transport.py
src/network/intercept/: consent.py  sniffer.py
src/network/security/: stealth.py
src/network/session/: manager.py
src/performance/: AGENT.md  REQUESTS.md
src/persistence/: AGENT.md  __init__.py  crypto.py  db.py  forms.py  models.py  session_store.py  store.py
src/security/: REQUESTS.md  THREAT_MODEL.md  allowlist.py  redact.py  sanitize.py
src/serialization/: models.py
src/tui/: AGENT.md  REQUESTS.md  display.py  memory.py
tests/: conftest.py
tests/fixtures/: captures.py  plans.py
tests/integration/: test_e2e_harness.py  test_http_streaming_integration.py  test_persistence_e2e.py  test_planner_executor_e2e.py  test_session_e2e.py  test_stealth_real.py
tests/unit/: test_defaults.py  test_jsonschema.py
tests/unit/ai/: test_answer.py  test_errors.py  test_executor.py  test_planner.py  test_provider.py  test_recovery.py
tests/unit/main/: test_form_helpers.py  test_main_utils.py  test_nav_replan.py  test_probe.py
tests/unit/network/: test_consent.py  test_dispatch_client.py  test_ratelimit.py  test_request_builder.py  test_request_spec_parsing.py  test_request_spec_streaming.py  test_session_manager.py  test_session_manager_persistence.py  test_sniffer.py  test_stealth.py  test_streaming_body.py
tests/unit/persistence/: test_crypto.py  test_db.py  test_forms.py  test_session_store.py  test_store.py
tests/unit/security/: test_allowlist.py  test_redact.py  test_sanitize.py
tests/unit/serialization/: test_models.py
tests/unit/tui/: test_display.py  test_memory.py
