[project]
name = "web-in-the-shell"
version = "0.1.0"
description = "Headless, network-level AI agent that bypasses the DOM to manipulate raw API data streams."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "DE41H", email = "f20250721@pilani.bits-pilani.ac.in"},
]
keywords = ["ai-agent", "web-automation", "playwright", "llm", "agentic-web", "hackathon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "playwright==1.48.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.1.0",
    "httpx>=0.27.0",
    "respx>=0.21",
    "rich>=13.7.0",
    "anthropic>=0.28.0",
    "openai>=1.0.0",
    "aiosqlite>=0.20.0",
    "keyring>=24.0.0",
    "cryptography>=42.0.0",
    "jsonschema>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/DE41H/web-in-the-shell"
Repository = "https://github.com/DE41H/web-in-the-shell"
Issues = "https://github.com/DE41H/web-in-the-shell/issues"

[project.scripts]
wits = "main:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6.0",
    "pytest-playwright>=0.5.2",
    "pyright>=1.1.350",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
omit = ["src/main.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "UP"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
include = ["src"]
exclude = ["tests", ".venv", "**/__pycache__"]
